--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,9 +9,17 @@
 @import "skills";
 
 .page {
-    margin: 30px 100px;
+    
+    margin: 15px 50px;
     box-shadow: 3px 3px 10px #333;
     background-color: #fff;
+    @include media-breakpoint-up(lg) {
+        margin: 30px 100px;    
+    }
+
+    @include media-breakpoint-up(xl) {
+        margin: 30px 0;    
+    }
 
     .page-heading {
         border-top: 2px solid $bb-darkblue;
