--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -41,5 +41,5 @@ $nav-tabs-link-active-bg: #fff;
 $font-size-base: 1rem;  // Default
 $text-color: #333;
 $enable-shadows: true;
-$grid-breakpoints: ( xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px ) !default;
+$grid-breakpoints: ( xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px );
 
